# Nine_Mens_Morris_with_Franka_ROS

./: README.md  alpha_beta_pruning.py  board.py  board_oop.py  board_with_ai.py  heuristics.py  main.py  proba.py  state_space.py  state_space_descriptor.py
Franka_ROS/franka_description/robots/: panda_arm.xacro  panda_arm_vacuum.urdf.xacro  vacuum_gripper.urdf.xacro
Franka_ROS/new_panda_moveit_config/: package.xml
Franka_ROS/new_panda_moveit_config/config/: ompl_planning.yaml  panda.srdf  ros_controllers.yaml
Franka_ROS/new_panda_moveit_config/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml
Franka_ROS/panda_sim/config/: panda_control.yaml
Franka_ROS/panda_sim/include/: ROSVacuumGripperPlugin.hh
Franka_ROS/panda_sim/launch/: game_world.launch  game_world_gp.launch
Franka_ROS/panda_sim/models/black_piece/: model.config  model.sdf
Franka_ROS/panda_sim/models/my_ground_plane/materials/scripts/: my_ground_plane.material
Franka_ROS/panda_sim/models/white_piece/: model.sdf
Franka_ROS/panda_sim/src/: ROSVacuumGripperPlugin.cc  VacuumGripperPlugin.cc
Franka_ROS/panda_sim/src/panda_sim/: board_with_ai.py  franka_positons.py  heuristics.py  main.py  panda_interface.py  testiranje.py
Franka_ROS/panda_sim/srv/: CartesianPath.srv  JointsGoal.srv
Franka_ROS/panda_sim/worlds/: game_world.world  game_world_2.world  game_world_final.world  game_world_gp.world  game_world_novo.world  testiranje.world
artificial_intelligence/: CMakeLists.txt  package.xml
artificial_intelligence/src/scripts/: alpha_beta_pruning.py  board_no_franka.py  board_with_ai.py  heuristics.py  main_no_franka.py
new_panda_moveit_config/: .setup_assistant  CMakeLists.txt
new_panda_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
panda_sim/: CMakeLists.txt  controller_plugins.xml  package.xml  setup.py
panda_sim/launch/: game_world.launch  sim.launch
panda_sim/models/my_ground_plane/: model.sdf
panda_sim/models/white_piece/: model.config
panda_sim/src/: joint_position_controller.cpp  robot_state_initializer.cpp
panda_sim/src/panda_sim/: panda_interface.py
panda_sim/srv/: CartesianGoal.srv  NamedGoal.srv
panda_sim/worlds/: game_world_final_m.world
